# vcf2fasta

./: .gitignore  LICENSE  README.md  pyproject.toml  vcf2fasta.pl  vcf2fasta.py  vcf2fasta2.py  vcf2fasta3.py
example/: gff_file.gff  intervals.bed  intervals.gff  reference  reference.fai  test_file_diploid_phased.vcf.gz.tbi  test_file_diploid_unphased.vcf.gz.tbi  test_file_haploid.vcf.gz.tbi
v2f/: cli.py  functions.py  parser.py
